[package]
name = "vear"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1"
chardetng = "0.1"
encoding_rs = "0.8"
futures = "0.3"
futures-timer = "3.0"
unicode-width = "0.1"
zip = "0.5"

[dependencies.async-std]
version = "1.7"
features = [ "attributes" ]

[dependencies.crossterm]
version = "0.18"
features = [ "event-stream" ]

[dependencies.tui]
version = "0.12"
default-features = false
features = [ "crossterm" ]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"